--- a/pom.xml
+++ b/pom.xml
@@ -8,13 +8,13 @@
 		<version>2.5.4</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>edu.eci.ieti.taskapirest</groupId>
-	<artifactId>taskdto</artifactId>
+	<groupId>edu.eci.ieti</groupId>
+	<artifactId>taskapirest</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>taskdto</name>
+	<name>taskapirest</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
-		<java.version>11</java.version>
+		<java.version>1.8</java.version>
 	</properties>
 	<dependencies>
 		<dependency>
